Fix API to only need one request - Use a search request to randomly search artwork (instead of generating a random art ID). Thanks to nikhil trivedi at the Art Institute of Chicago for help with this! - Removed validation function (since search filters for required terms already) - Update data unwrapping - Remove error loop - Update error html - Update html header explanation of API use - Update styles to give aside a minimum width

--- a/art/styles.css
+++ b/art/styles.css
@@ -133,6 +133,7 @@ button {
 /* Aside */
 aside {
   width: 35%;
+  min-width: 300px;
   /* width | style */
   border: 5px dashed;
   padding: 10px;
